# rust-web-mongo

./: README.md
actix-sample/: ActixSample.postman_collection.json  Cargo.toml
actix-sample/src/: db.rs  handlers.rs  main.rs
axum-sample/: AxumSample.postman_collection.json  Cargo.toml
axum-sample/src/: db.rs  handlers.rs  main.rs
rocket-sample/: Cargo.toml  Rocket.toml  RocketSample.postman_collection.json
rocket-sample/src/: db.rs  main.rs  models.rs  routes.rs
