[package]
name = "actix_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json = "1.0.114"
serde = { version = "1.0.195", features = ["derive"] }
mongodb = "2.8.1"
futures = "0.3.28"