[package]
name = "axum_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.8.1"
serde_json = "1.0.114"

axum = "0.7.5"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3.28"