[package]
name = "rocket_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.8.1"
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["mongodb"] }
serde_json = "1.0.114"


axum = "0.7.5"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.28"